<resources>

    <string name="app_name">TodoList</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">My Home Work</string>
    
    <string name="add"> + </string>
    <string name="edit"> ~ </string>
    <string name="delete"> x </string>
    
    <string name="title">Title</string>
    <string name="created_date">Created date</string>
    <string name="status">Status</string>
    
    <string name="working_text">Working</string>
    <string name="pending_text">Pending</string>
    <string name="completed_text">Completed</string>
    
    <string name="create_text">Create</string>
    <string name="cancel_text">Cancel</string>
    

</resources>