<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7B6248"
    android:orientation="vertical"
    android:padding="10dp" >

    <!-- Title -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#FFF"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <!-- Created date -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvCreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_date"
            android:textColor="#FFF"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/edtCreatedDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <!-- Status -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="#FFF"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rdbWorking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/working_text"
                    android:textColor="#FFF"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/rdbPending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pending_text"
                    android:textColor="#FFF"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/rdbCompleted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_text"
                    android:textColor="#FFF"
                    android:textStyle="italic" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF7C00"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/create_text"
            android:textColor="#FFF"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="#FF7C00"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/cancel_text"
            android:textColor="#FFF"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>